<resources>
    <string name="app_name">RESMACONVI IEP</string>
    <string name="titulo_apk">RESMACONVI I.E.P</string>
    <string name="txt_inicio_bienvenida">Bienvenidos a RESMACONVI I.E.P</string>
    <string name="txt_inicio_bienvenida_admin">Bienvenido al Modulo de Administrador</string>
    <string name="btn_docente">Agregar Docente</string>
    <string name="btn_estudiante">Agregar Estudiante</string>
    <string name="btn_manual">Agregar Tipo de Falta</string>
    <string name="id">id</string>
    <string name="correo">Correo:</string>
    <string name="enBlanco" />
    <string name="formulario_de_registro">Formulario de registro</string>
    <string name="ingrese_nombre_completo_del_docente">Antes de continuar no olvides de completar todos los campos con los datos del docente que se va agregar.</string>
    <string name="ingrese_nombre_completo_del_estudiante">Antes de continuar no olvides de completar todos los campos con los datos del estudiante que se va agregar.</string>
    <string name="ingrese_nombre_completo_de_la_tipo_de_falta">Antes de continuar no olvides de completar todos los campos con los datos requeridos.</string>
    <string name="completar_campo">completar campo</string>
    <string name="ingresar">ingresar</string>
    <string name="ingresa_el_nombre_completo">Ingresa el nombre completo.</string>
    <string name="numero_de_documento">Numero de documento.</string>
    <string name="ingresa_la_fecha_de_nacimiento">Ingresa la fecha de nacimiento.</string>
    <string name="ingresa_su_genero">Ingresa su genero.</string>
    <string name="ingresa_el_cargo_del_docente">Ingresa el cargo del docente</string>
    <string name="ingresa_la_sede_del_docente">Ingresa la sede del docente</string>
    <string name="ingresa_la_sede_del_estudiante">Ingresa la sede del estudiante</string>
    <string name="ingresa_la_area_del_docente">Ingresa la area del docente</string>
    <string name="ingresa_el_nivel_de_ense_anza_del_docente">Ingresa el nivel de enseñanza del docente</string>
    <string name="ingresa_la_residencia_del_docente">Ingresa la residencia del docente</string>
    <string name="ingresa_el_numero_de_telefono_del_docente">Ingresa el numero de telefono del docente</string>
    <string name="ingresa_la_direcci_n_de_correo_del_docente">Ingresa la dirección de correo del docente</string>
    <string name="ingresar_nombre">Ingresar Nombre</string>
    <string name="guardar">Guardar</string>
    <string name="ruta_de_atenci_n_integral_para_la_convivencia_escolar">Ruta de atención Integral para la CONVIVENCIA ESCOLAR</string>
    <string name="promocion_text">Fomentar el mejoramiento de la convivencia y el clima escolar con el fin de generar un entorno favorable para el ejercico real y efectivo de los Derechos Humanos, sexuales y reproductivos.</string>
    <string name="prevencion_text">Intervenir oportunamente en los comportamientos que podrian afectar la realización efectiva de los derechos humanos, sexuales y reproductivos en el contexto escolar.</string>
    <string name="atencion_text">Asistir oportunamente a los miembros de la comunidad educativa frente a las situaciones que afectan la Convivencia Escolar y vulneración de los Derechos Humanos, Sexuales y Reproductivos.</string>
    <string name="seguimiento_text">Seguimiento y evaluación de las estrategias y acciones de promoción, prevención y atención desarrolladas por los actores e instancias del Sistema Nacional de Convivencia Escolar.</string>
    <string name="tipo1_text">Conflictos manejados inadecuadamente y situaciones esporádicas que inciden negativamente en el clima escolar.
    No generan daños al cuerpo o a la salud fisica o mental.
    </string>
    <string name="tipo2_text1">Situaciones de agresión escolar, acoso escolar(Bullying) y ciberacoso(Ciberbullying), que no revistan las características de la comisión de un delito y que cumplan con cualquier de las siguintes caracteristicas:
    </string>
    <string name="tipo2_text2">a. Que se presenten de manera REPETIDA o SISTEMÁTICA.</string>
    <string name="tipo2_text3">b. Que causen daños al cuerpo o a la salud física o mental SIN GENERAR INCAPACIDAD ALGUNA para cualquiera de los involucrados.
    </string>
    <string name="tipo3_text">Situaciones que sean constitutivas de presuntos delitos contra la libertad, integridad y formación sexual.
    </string>
    <string name="promocion">PROMOCIÓN</string>
    <string name="prevencion">PREVENCIÓN</string>
    <string name="atencion">ATENCIÓN</string>
    <string name="seguimiento">SEGUIMIENTO</string>
    <string name="situaciones1">SITUACIONES TIPO 1</string>
    <string name="situaciones_que_afectan_la_convivencia_escolar_y_el_ejercicio_de_los_derechos_humanos_sexuales_y_reproductivos">SITUACIONES QUE AFECTAN LA CONVIVENCIA ESCOLAR Y VULNERACION DE LOS DERECHOS HUMANOS, SEXUALES Y REPRODUCTIVOS.</string>
    <string name="situaciones2">SITUACIONES TIPO 2</string>
    <string name="situaciones3">SITUACIONES TIPO 3</string>
    <string name="ingrese_la_descripci_n">Ingrese la descripción</string>
    <string name="ver_faltas_tipo_1">Ver Faltas Tipo 1</string>
    <string name="ver_faltas_tipo_2">Ver Faltas Tipo 2</string>
    <string name="ver_faltas_tipo_3">Ver Faltas Tipo 3</string>
    <string name="ver_reportes">Ver Reportes</string>
    <string name="ver_docentes">Ver Docentes</string>
    <string name="ver_estudiantes">ver estudiantes</string>
    <string name="grados_escolares">Grados Escolares</string>
    <string name="preescolar">preescolar</string>
    <string name="primero">primero</string>
    <string name="segundo">segundo</string>
    <string name="tercero">Tercero</string>
    <string name="cuarto">Cuarto</string>
    <string name="quinto">Quinto</string>
    <string name="decimo_b">Decimo b</string>
    <string name="decimo_a">Decimo A</string>
    <string name="noveno">noveno</string>
    <string name="octavo">octavo</string>
    <string name="septimo">septimo</string>
    <string name="sexto">sexto</string>
    <string name="once_a">once a</string>
    <string name="once_b">once b</string>
    <string name="tipo_de_situaciones">Tipo de Situaciones</string>
    <string name="ver_situaciones_tipo_1">Ver Situaciones Tipo 1</string>
    <string name="ver_tipo_de_faltas">Ver Tipo de faltas</string>
    <string name="generar_reporte">Generar Reporte</string>
    <string name="reportar_docente">reportar Docente</string>
    <string name="reportar_estudiante">Reportar Estudiante</string>
    <string name="reportar_anonimamente">Reportar Anonimamente</string>
    <string name="seleccionar_docente">Seleccionar Docente</string>
    <string name="selecionar_tipo_de_falta">Selecionar Tipo de Falta</string>
    <string name="describir_falta">Describir Falta</string>
    <string name="repoDocente">Reportar Docente</string>
    <string name="reportar">reportar</string>
    <string name="seleccionar_a_o">Seleccionar Año</string>
    <string name="descri_año">Antes de continuar selecciona el año en el cual vamos a generar el reporte.</string>
    <string name="continuar">continuar</string>
    <string name="juan_camilo_rodriguez_gomez">Juan Camilo Rodriguez Gomez</string>
    <string name="seleccionar_estudiante">Seleccionar Estudiante</string>
    <string name="seleccionar_curso">Seleccionar Curso</string>
    <string name="seleccionar_falta_cometida">Seleccionar Falta Cometida</string>
    <string name="compromiso_del_estudiante">Compromiso Del Estudiante</string>
    <string name="reporte_para">Reporte Para:</string>
    <string name="estamos_melos">Estamos melos</string>
    <string name="situaciones_tipo_1">Situaciones Tipo 1</string>
    <string name="compromiso_del_docente">Compromiso Del Docente</string>
    <string name="txtVerReportes">Ver Reportes</string>
    <string name="ver_reportes_docentes">Ver Reportes Docentes</string>
    <string name="ver_todos_los_reportes">ver todos los reportes</string>
    <string name="textDerechos1">Los derechos de los estudiantes están reconocidos dentro del ámbito constitucional, fundamentalmente en su preámbulo y en los derechos fundamentales, sociales, culturales, económicos y ecológicos cuyos principios se fundamentan en el respeto a la dignidad humana. </string>
    <string name="textDerechos2">Cuando el estudiante se matricula en la Institución Educativa El Paraíso, adquiere los siguientes derechos, Además de los derechos contemplados en los acuerdos Internacionales, en la Constitución Política de Colombia, El Código de la Infancia y la adolescencia 1098 de 2006, la protección que les genera la carta magna, las sentencias de la corte constitucional, la ley 1146 de 2007 y la ley 1620 de 2013, Decreto 1965 de 2013 y Decreto 860 de 2013, y los que le otorga su identidad y dignidad intrínseca y las leyes de la República; cuando el alumno se matricula en nuestra Institución, adquiere y en adelante gozará de los siguientes derechos: </string>
    <string name="ver_derechos">ver derechos</string>
    <string name="derechos_y_deberes_de_los_estudiantes">DERECHOS Y DEBERES DE LOS ESTUDIANTES</string>
    <string name="text_deberes_titu">Los estudiantes de la misma manera que tienen derechos para poder ser cumplidos antes deben cumplir con algunos deberes que fundamentan en el respeto a la dignidad humana.</string>
    <string name="ver_deberes">ver deberes</string>
    <string name="derechos_y_deberes_de_los_docentes">DERECHOS Y DEBERES DE LOS DOCENTES</string>
    <string name="textDerechosDocentes">Los derechos de los docentes y directivos adoptados por la institución, son los contemplados en la Constitución Política, en la ley 734 del Código Único Disciplinario, los Decreto 2277 y 1278 y lo dispuesto en este Manual de Convivencia, los docentes y directivos al servicio del Estado tendrán los siguientes derechos: </string>
    <string name="text_deberes_doce">Los docentes de la misma manera que tienen derechos para poder ser cumplidos antes deben cumplir con algunos deberes regidos por la institución.</string>
    <string name="txtProtocolo1">Este protocolo se activará por los docentes con intervenciones pedagógicas entendidas estas como las acciones que tienen la intención de hacer de los procesos disciplinarios y de convivencia, parte de la labor formativa de la institución para lograr la educación integral, así: </string>
</resources>